# sensor-data-service

./: .env.example  Dockerfile  README.md  docker-compose.yml  healthcheck.py  pyproject.toml
scripts/: format  lint
sds/: __main__.py  app.py
sds/api/: api.py
sds/api/routes/: sensors_data.py
sds/core/: configs.py  events.py
sds/db/: client.py  database.py  db.py
sds/db/repositories/: base.py  sensor.py
sds/schemas/: google_pubsub.py  sensors.py
